--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Ulrich Hoffer</title>
-    <link rel="stylescheet" href="style.css">
+    <link rel = "icon" type = "image/x-icon" href="h.png" >
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-
-hi
-
-
+    <div class="banner">
+        <div class = "logo"> 
+            <img src="h.png" height="200" width="200" alt="logo" > 
+        </div>
+        <div class="navbar">
+            <ul>
+                <li><a href="#">Browse Project</a> </li>
+                <li><a id="about" href="#" onclick="showText()" >About me & Contact</a> </li>
+            </ul>
+        </div>
+        
+    </div>
+  
       <script src = "main.js"> </script>
 </body>
 </html>
