--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
     <div >
         <div class="navbar">
             <ul>
-                <li><a href="project.html">Browse Project</a> </li>
+                <li><a  href="#project" onclick="showText()">Browse Project</a> </li>
                 <li><a href="iamges/resum.pdf">My Resume</a> </li>
                 <li><a id="" href="#about" onclick="showText()" >About me & Contact </a> </li>
             </ul>
@@ -51,7 +51,7 @@
         </div>
 
 
-        <section> 
+        <section id="project" class="project" > 
             <div class="row">
                 <div class="column">
                     <div class="content">
@@ -72,10 +72,12 @@
                     <div class="content">
                         <img src="iamges/placeholder.jpg" alt="Project Output ScreenShot ">
                         <h3> 
-                            <a href="linktocode.code"> (2) Project Name</a>
+                            <a href="linktocode.code"> (2) Project Name Lorem Ipsum</a>
                         </h3>
                         <p>
                             Project Description
+                            Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+
                         </p>
                     </div>
                 </div>
@@ -86,10 +88,12 @@
                     <div class="content">
                         <img src="iamges/placeholder.jpg" alt="Project Output ScreenShot ">
                         <h3> 
-                            <a href="linktocode.code"> (3) Project Name</a>
+                            <a href="linktocode.code"> (3) Project Name Lorem Ipsum</a>
                         </h3>
                         <p>
                             Project Description
+                            Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+
                         </p>
                     </div>
                 </div>
