--- a/project.html
+++ b/project.html
@@ -32,9 +32,8 @@
             I am a dedicted Student and looking to pursue my Computer Science Career!
             <h2> Interest and Hobbies</h2>
             I am cycling hoobiest and I love talking
-            about technologies, <br> computer and internet realated stuff. 
-            I also like Creativity and I usually use canva.com
-            to design ideas 
+            about technologies, computer and internet realated stuff. 
+            I also like Creativity and I usually use canva.com to design ideas 
 
             <img  class="me" src="iamges/me.png" alt="Me">
             <img  class="me" src="iamges/Bike.png" alt="Me">
@@ -55,9 +54,10 @@
             <div class="row">
                 <div class="column">
                     <div class="content">
-                        <img src="iamges/placeholder.jpg" alt="Project Output ScreenShot ">
+                        <img src="iamges/flowers.png" alt="Project Output ScreenShot ">
                         <h3> 
-                            <a href="linktocode.code"> (1) Project Name Lorem Ipsum</a>
+                            <a href="https://github.com/holfry/Java-Flower-Project.git"> 
+                                Java-Flower-Project</a>
                         </h3>
                         <p>
                             Project Description
@@ -70,9 +70,10 @@
             <div class="row">
                 <div class="column">
                     <div class="content">
-                        <img src="iamges/placeholder.jpg" alt="Project Output ScreenShot ">
+                        <img src="iamges/smiley.png" alt="Project Output ScreenShot ">
                         <h3> 
-                            <a href="linktocode.code"> (2) Project Name Lorem Ipsum</a>
+                            <a href="https://github.com/holfry/Java-Smiley-Project.git"> 
+                                Java-Smiley-Project </a>
                         </h3>
                         <p>
                             Project Description
@@ -88,7 +89,8 @@
                     <div class="content">
                         <img src="iamges/placeholder.jpg" alt="Project Output ScreenShot ">
                         <h3> 
-                            <a href="linktocode.code"> (3) Project Name Lorem Ipsum</a>
+                            <a href="https://github.com/holfry/SQL-Database-Project.git"> 
+                                SQL-Database-Project</a>
                         </h3>
                         <p>
                             Project Description
