--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
         <div id="resume">
             <embed src="iamges/resum.pdf" width="595px" height="840px" /> 
+            <div class="mobileShow"> <a href="iamges\resum.pdf" 
+                style="color: aliceblue; text-decoration: none;" >   
+                Click here if you can't see pdf  </a> </div>
         </div>
 
         <div id="about" class="about text">
