--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div >
         <div class="navbar">
             <ul>
-                <li><a href="#project">Browse Project</a> </li>
+                <li><a href="#project">Browse Class Works </a> </li>
                 <li><a href="#resume"> My Resume</a> </li>
                 <li><a id="" href="#about" onclick="showText()" >About me & Contact </a> </li>
             </ul>
@@ -35,11 +35,11 @@
         <div id="about" class="about text">
             Hello, my name is Ulrich and student at NHCC in Brooklyn Park, MN. <br> 
             I love reading articles online and ride my bycycle when I feel to.<br>
-            I am native to Africa and family is a big part of who I am. <br>
-            I am a dedicted Student and looking to pursue my Computer Science Career! <br>
+            I am native to Africa, originating from Togo, and family is a big part of who I am. <br>
+            I am a dedicated Student and looking to pursue my Computer Science Career! <br>
             <h2> Interest and Hobbies</h2>
-            I am cycling hoobiest and I love talking
-            about technologies, <br> computer and internet realated stuff.
+            I am cycling hobbyist and I love talking
+            about technologies, <br> computer and internet related stuff.
             <!-- I also like Creativity and I usually use canva.com
             to design ideas  -->
 
@@ -47,10 +47,10 @@
             <div  class="about text">
                 <div class="contact" >
                     <ul class="">
-                    <li> <a href="http://github.com/holfry" target="_blank" rel="noopener noreferrer"><img src="iamges/github.png" alt="github logo"></a>           </li>
-                    <li> <a href="http://instagram.com/holfry9" target="_blank" rel="noopener noreferrer"><img src="iamges/instagram.png" alt="instagram logo"></a> </li>
-                    <li> <a href="http://twitter.com/holfry9" target="_blank" rel="noopener noreferrer"><img src="iamges/twitter.png" alt="twitter logo"></a>       </li>
-                    <li> <a href="mailto:holfry9@gmail.com" target="_blank" rel="noopener noreferrer"><img src="iamges/mail.png" alt="mail logo"></a>              </li>
+                    <li> <a href="http://github.com/holfry" target="_blank" rel="noopener noreferrer"><img src="iamges/github.png" alt="github logo"></a></li>
+                    <li> <a href="http://instagram.com/holfry9" target="_blank" rel="noopener noreferrer"><img src="iamges/instagram.png" alt="instagram logo"></a></li>
+                    <li> <a href="http://twitter.com/holfry9" target="_blank" rel="noopener noreferrer"><img src="iamges/twitter.png" alt="twitter logo"></a></li>
+                    <li> <a href="mailto:holfry9@gmail.com" target="_blank" rel="noopener noreferrer"><img src="iamges/mail.png" alt="mail logo"></a></li>
 
                     </ul>
                 </div>
@@ -67,7 +67,7 @@
                         <img src="iamges/flowers.png" alt="Project Output ScreenShot ">
                         <h3> 
                             <a href="https://github.com/holfry/Java-Flower-Project.git"> 
-                                Java Flower Project</a>
+                                Java Flower Project </a>
                         </h3>
                         <p>
                             This code draw four (4) flowers on different field with the flower name, 
@@ -96,13 +96,11 @@
                         <img src="iamges/sql_db.png" alt="Project Output ScreenShot ">
                         <h3> 
                             <a href="https://github.com/holfry/SQL-Database-Project.git"> 
-                                SQL Database Project</a>
+                               SQL Database Project </a>
                         </h3>
                         <p>
-                            This code create a library database. I created the database db, 
-                            created tables, then insert data. After I used different query 
-                            to view, update or modify the data. 
-
+                            These codes create a library database db. It has value is the tables and Columns that can and cannot be updated.
+                            The last files filter and retrives the contents in the db. 
                         </p>
                     </div>
                 </div>
