--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="contact" >
             <ul class="">
                 <li> <a href="http://github.com/holfry" target="_blank" rel="noopener noreferrer"><img src="iamges/github.png" alt="github logo"></a></li>
-                <li> <a href="http://instagram.com/holfry9" target="_blank" rel="noopener noreferrer"><img src="iamges/instagram.png" alt="instagram logo"></a></li>
+                <li> <a href="http://instagram.com/holfry_" target="_blank" rel="noopener noreferrer"><img src="iamges/instagram.png" alt="instagram logo"></a></li>
                 <li> <a href="http://twitter.com/holfry9" target="_blank" rel="noopener noreferrer"><img src="iamges/twitter.png" alt="twitter logo"></a></li>
-                <li> <a href="mailto:holfry9@gmail.com" target="_blank" rel="noopener noreferrer"><img src="iamges/mail.png" alt="mail logo"></a></li>
+                <li> <a href="mailto:ulrichhoffer21@gmail.com" target="_blank" rel="noopener noreferrer"><img src="iamges/mail.png" alt="mail logo"></a></li>
 
              </ul>
         </div>
