Update index.html to include prints section
Added sections for Laser and Paper Prints with links.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     <div class = "logo"> 
         <a href="#"> <img src="iamges/h.png" alt="holfry logo"  width="250px" > </a>
     </div>
-        <div class="contact" >
+        <div class="Prints" >
             <ul class="">
-                <li> <a href="http://github.com/holfry" target="_blank" rel="noopener noreferrer"><img src="iamges/github.png" alt="github logo"></a></li>
-                <li> <a href="http://instagram.com/holfry_" target="_blank" rel="noopener noreferrer"><img src="iamges/instagram.png" alt="instagram logo"></a></li>
-                <li> <a href="http://twitter.com/holfry9" target="_blank" rel="noopener noreferrer"><img src="iamges/twitter.png" alt="twitter logo"></a></li>
-                <li> <a href="mailto:ulrichhoffer21@gmail.com" target="_blank" rel="noopener noreferrer"><img src="iamges/mail.png" alt="mail logo"></a></li>
-
+                <li> Laser Prints <a href="https://drive.google.com/drive/folders/1ehoKDiwMaPAJ8TUOum52vK5ppkLZPsgO?usp=drive_link"  </a></li>
+                <li> Paper Prints <a href="https://drive.google.com/drive/folders/1OAC-IVPWohlD_bNbJPSq_liY_VEI1MBW?usp=drive_link"  </a></li>
+              
              </ul>
         </div>
 
@@ -32,3 +30,4 @@
 </body>
 
 </html>
+
