Refactor index.html for clarity and updates
Updated the HTML structure and links for prints.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
     <div class = "logo"> 
         <a href="#"> <img src="iamges/h.png" alt="holfry logo"  width="250px" > </a>
     </div>
-        <div class="Prints" >
-            <ul class="">
-                <li> Laser Prints <a href="https://drive.google.com/drive/folders/1ehoKDiwMaPAJ8TUOum52vK5ppkLZPsgO?usp=drive_link"  </a></li>
-                <li> Paper Prints <a href="https://drive.google.com/drive/folders/1OAC-IVPWohlD_bNbJPSq_liY_VEI1MBW?usp=drive_link"  </a></li>
+        <div class="" >  
+                <li> Prints <a href=" https://drive.google.com/drive/folders/1eQaobEQ1e6IGCSRUhGPCi83qAOJDcbuH?usp=drive_link "  </a></li>
               
-             </ul>
         </div>
 
     <script src = "main.js"> </script>
@@ -30,4 +27,5 @@
 </body>
 
 </html>
+
 
