Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <div class = "logo"> 
         <a href="#"> <img src="iamges/h.png" alt="holfry logo"  width="250px" > </a>
     </div>
-        <div class="" >  
-                <li> Prints <a> href=" https://drive.google.com/drive/folders/1eQaobEQ1e6IGCSRUhGPCi83qAOJDcbuH?usp=drive_link "  </a></li>
-              
+        <div class="" > Prints <a>href=" https://drive.google.com/drive/folders/1eQaobEQ1e6IGCSRUhGPCi83qAOJDcbuH?usp=drive_link "</a>
+        
         </div>
 
     <script src = "main.js"> </script>
@@ -27,6 +26,7 @@
 </body>
 
 </html>
+
 
 
 
