--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Protected Link</title>
+  <title>Protected Page</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
     <input type="password" id="passwordInput" placeholder="Password" />
     <button id="submitBtn">Submit</button>
     <p id="errorMessage"></p>
-    <a id="hiddenLink" href="#" target="_blank">For prints</a>
+    <div id="linkContainer"></div>
   </div>
 
   <script src="main.js"></script>
